<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="24dp"
            android:text="@string/zero"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:padding="15dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/F1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F1"
                app:layout_constraintEnd_toStartOf="@+id/F2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F2"
                app:layout_constraintEnd_toStartOf="@+id/F3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F1"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F3"
                app:layout_constraintEnd_toStartOf="@+id/F4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F2"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F4"
                app:layout_constraintEnd_toStartOf="@+id/F5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F3"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F5"
                app:layout_constraintEnd_toStartOf="@+id/F6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F4"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F6"
                app:layout_constraintEnd_toStartOf="@+id/F7"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F5"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F7"
                app:layout_constraintEnd_toStartOf="@+id/F8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F6"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F8"
                app:layout_constraintEnd_toStartOf="@+id/F9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F7"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F9"
                app:layout_constraintEnd_toStartOf="@+id/F10"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F8"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/F10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/F9"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/additionalButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:visibility="invisible">

            <Button
                android:id="@+id/buttonSin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signSin" />

            <Button
                android:id="@+id/buttonCos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signCos" />

            <Button
                android:id="@+id/buttonTan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signTan" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/signs"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signC" />

                <Button
                    android:id="@+id/buttonPlusMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signPlusMinus" />

                <Button
                    android:id="@+id/buttonPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signPercent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/six" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/three" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signDot" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signDivision" />

            <Button
                android:id="@+id/buttonMultiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signMultiplication" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signMinus" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signPlus" />

            <Button
                android:id="@+id/buttonEquality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signEquality" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signs"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:onClick="onClick"
                android:text="@string/switchButton" />

            <Button
                android:id="@+id/wallpaperButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/wallpaperButton" />


            <LinearLayout
                android:id="@+id/wallpaperLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/fileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/settingsHint"
                    android:layout_marginEnd="30dp"/>

                <Button
                    android:id="@+id/buttonOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OKButton" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>